--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@biconomy/account": "^3.1.1",
-    "@biconomy/bundler": "^3.1.1",
-    "@biconomy/common": "^3.1.1",
-    "@biconomy/core-types": "^3.1.1",
-    "@biconomy/modules": "^3.1.1",
+    "@biconomy/account": "^3.1.2",
+    "@biconomy/bundler": "^3.1.2",
+    "@biconomy/common": "^3.1.2",
+    "@biconomy/core-types": "^3.1.2",
+    "@biconomy/modules": "^3.1.2",
+    "@biconomy/paymaster": "^3.1.2",
     "@biconomy/particle-auth": "^3.1.1",
-    "@biconomy/paymaster": "^3.1.1",
     "ethers": "^5.7.2",
     "next": "14.0.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^10.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
