--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@biconomy/account": "^4.2.0",
+		"@biconomy/account": "^4.6.1",
+		"@biconomy/bundler": "^4.1.1",
+		"@biconomy/core-types": "^3.1.3",
 		"@biconomy/particle-auth": "^3.1.1",
+		"@biconomy/paymaster": "^4.1.1",
 		"ethers": "^5.7.2",
 		"next": "14.0.1",
 		"react": "^18",
 		"react-dom": "^18",
-		"react-toastify": "^10.0.3",
+		"react-toastify": "^10.0.5",
 		"viem": "^2.10.2"
 	},
 	"devDependencies": {
